PLSQL - Correct DataFlow Stack generation for ELSIF clause